--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -57,6 +57,7 @@
             android:ellipsize="end"
             android:maxLines="2"
             android:textSize="46sp"
+            android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -103,20 +104,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:background="@drawable/shape_rounded_rectangle"
-            android:backgroundTint="@color/colorAccent"
+            android:background="@color/colorAccent"
             android:minWidth="100dp"
             android:paddingLeft="16dp"
             android:paddingTop="4dp"
             android:paddingRight="16dp"
             android:paddingBottom="4dp"
+            android:text="@string/in_theaters"
+            android:textColor="@color/white"
             android:textAlignment="center"
             android:textAllCaps="true"
             android:textSize="12sp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/hlRatingBar"
-            tools:text="Thriller"
-            tools:visibility="visible" />
+            app:layout_constraintTop_toBottomOf="@id/hlRatingBar" />
 
         <TextView
             android:id="@+id/hlMovieGenreSecondary"
@@ -233,7 +233,7 @@
                         style="@style/NunitoSemiBoldStyle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/in_theaters"
+                        android:text="@string/videos"
                         android:textSize="18sp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
