--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="colorPrimaryDark">@android:color/black</color>
     <color name="colorSecondary">#ffffff</color>
     <color name="colorAccent">#eb5757</color>
+
+    <color name="yellow">#FFEB3B</color>
+    <color name="blue">#133DBC</color>
+    <color name="green">#227F48</color>
 </resources>
