--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -79,7 +79,7 @@
 
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/others"
+        android:id="@+id/lb_loginOthersButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -100,7 +100,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/others" />
+        app:layout_constraintTop_toBottomOf="@+id/lb_loginOthersButton" />
 
     <ImageView
         android:id="@+id/loginGoogleButton"
