--- a/app/src/main/res/layout/fragment_store.xml
+++ b/app/src/main/res/layout/fragment_store.xml
@@ -23,6 +23,7 @@
         android:textAllCaps="true"
         android:textColor="@color/white"
         android:textSize="12sp"
+        android:visibility="invisible"
         app:layout_constraintEnd_toStartOf="@+id/store_monto"
         app:layout_constraintTop_toTopOf="parent" />
     <TextView
@@ -37,7 +38,7 @@
         android:paddingRight="16dp"
         android:paddingBottom="4dp"
         android:layout_marginTop="20dp"
-        android:text="Comprar"
+        android:text="Continuarit "
         android:textAlignment="center"
         android:textAllCaps="true"
         android:textColor="@color/white"
