--- a/app/src/main/res/layout/fragment_store.xml
+++ b/app/src/main/res/layout/fragment_store.xml
@@ -38,7 +38,7 @@
         android:paddingRight="16dp"
         android:paddingBottom="4dp"
         android:layout_marginTop="20dp"
-        android:text="Continuarit "
+        android:text="Continuar"
         android:textAlignment="center"
         android:textAllCaps="true"
         android:textColor="@color/white"
